update:카테고리 불러와짐